fixed bug in content-length : should be bytes not characters

--- a/FixedRecordStore/README
+++ b/FixedRecordStore/README
@@ -1,12 +1,12 @@
 NAME
-    DB::DataStore - Simple and fast record based data store
+    Data::RecordStore - Simple and fast record based data store
 
 SYNPOSIS
-    use DB::DataStore;
+    use Data::RecordStore;
 
     my $data = "TEXT DATA OR BYTES";
 
-    my $store = DB::DataStore->open( $directory );
+    my $store = Data::RecordStore->open( $directory );
 
     my $id = $store->stow( $data, $optionalID );
 
@@ -24,19 +24,19 @@ DESCRIPTION
     to be both easy to set up and easy to use.
 
 LIMITATIONS
-    DB::DataStore is not meant to store huge amounts of data. It will fail
+    Data::RecordStore is not meant to store huge amounts of data. It will fail
     if it tries to create a file size greater than the max allowed by the
     filesystem. This limitation will be removed in subsequent versions. This
     limitation is most important when working with sets of data that
     approach the max file size of the system in question.
 
     This is not written with thread safety in mind, so unexpected behavior
-    can occur when multiple DB::DataStore objects open the same directory.
+    can occur when multiple Data::RecordStore objects open the same directory.
 
 METHODS
   open( directory )
     Takes a single argument - a directory, and constructs the data store in
-    it. The directory must be writeable or creatible. If a DataStore already
+    it. The directory must be writeable or creatible. If a RecordStore already
     exists there, it opens it, otherwise it creates a new one.
 
   entry_count
@@ -45,15 +45,15 @@ METHODS
 
   ensure_entry_count( min_count )
     This makes sure there there are at least min_count entries in this
-    datastore. This creates empty records if needed.
+    RecordStore. This creates empty records if needed.
 
   next_id
     This sets up a new empty record and returns the id for it.
 
   stow( data, optionalID )
-    This saves the text or byte data to the datastore. If an id is passed
+    This saves the text or byte data to the RecordStore. If an id is passed
     in, this saves the data to the record for that id, overwriting what was
-    there. If an id is not passed in, it creates a new datastore.
+    there. If an id is not passed in, it creates a new RecordStore.
 
     Returns the id of the record written to.
 
@@ -63,14 +63,14 @@ METHODS
 
   recycle( $id )
     This marks that the record associated with the id may be reused. Calling
-    this does not decrement the number of entries reported by the datastore.
+    this does not decrement the number of entries reported by the RecordStore.
 
 HELPER PACKAGES
-    DB::DataStore relies on two helper packages that are useful in their own
+    Data::RecordStore relies on two helper packages that are useful in their own
     right and are documented here.
 
 HELPER PACKAGE
-    DB::DataStore::FixedStore
+    Data::RecordStore::FixedStore
 
 DESCRIPTION
     A fixed record store that uses perl pack and unpack templates to store
@@ -82,7 +82,7 @@ SYNOPSIS
     my $size; #required if the template does not have a definite size, like
     A*
 
-    my $store = DB::DataStore::FixedStore->open( $template, $filename, $size
+    my $store = Data::RecordStore::FixedStore->open( $template, $filename, $size
     );
 
     my $new_id = $store->next_id;
@@ -150,13 +150,13 @@ METHODS
     Removes the file for this record store entirely from the file system.
 
 HELPER PACKAGE
-    DB::DataStore::FixedRecycleStore
+    Data::RecordStore::FixedRecycleStore
 
 SYNOPSIS
-    A subclass DB::DataStore::FixedRecycleStore. This allows indexes to be
+    A subclass Data::RecordStore::FixedRecycleStore. This allows indexes to be
     recycled and their record space reclaimed.
 
-    my $store = DB::DataStore::FixedRecycleStore->open( $template,
+    my $store = Data::RecordStore::FixedRecycleStore->open( $template,
     $filename, $size );
 
     my $id = $store->next_id;
