--- a/FixedRecordStore/CHANGELOG
+++ b/FixedRecordStore/CHANGELOG
@@ -1,3 +1,8 @@
+
+1.06 - added version to Make.PL
+
+1.05 - added version to Build.PL. changed name from DB::DataStore to Data::RecordStore
+	
 1.04 - added license, version and changelog files to manifest
 
 1.03 - added use warnings, the license file and the changelog file.
