--- a/LockServer/CHANGELOG
+++ b/LockServer/CHANGELOG
@@ -1,3 +1,5 @@
+1.7  - added shtudown ability for lock client
+	
 1.6  - added ping ability for lock client
 	
 1.3  - added configurable retry ability for lock clients
