Updated to version 1.40

--- a/ServerYote/ChangeLog
+++ b/ServerYote/ChangeLog
@@ -6,3 +6,8 @@
 	* assumes that some encapsulation will be done with private members
 
 
+	1.04 - added a cgi/modperl flavor. The API between client and server was updated for this.
+	Updating both yote.js and Yote::Server ( as part of a normal upgrade ) will make this
+	transparent
+
+
