--- a/LockServer/CHANGELOG
+++ b/LockServer/CHANGELOG
@@ -1,3 +1,4 @@
+1.75 - added dependency of Daemon::Daemonize
 1.74 - added bin/lock_server to manifest so it installs
 1.7  - added shtudown ability for lock client
 	
