--- a/ServerYote/ChangeLog
+++ b/ServerYote/ChangeLog
@@ -1,4 +1,5 @@
 2016-09-01 eric wolf  <coyocanid@gmail.com>
+	* Version 1.12 : fixed nit in UUID call
 	* Version 1.11
 	* added onLogin method for accounts
 	* added protocol for file uploads
