--- a/ServerYote/ChangeLog
+++ b/ServerYote/ChangeLog
@@ -1,4 +1,5 @@
-	2016-09-01 eric wolf  <coyocanid@gmail.com>
+2016-09-01 eric wolf  <coyocanid@gmail.com>
+        * Version 1.16 : logins are case insensitive now
         * Version 1.14 : correctly handle undefined values being passed in
 	*                simplified update protocol
 	* Version 1.13 : dumb javascript error
