--- a/YoteBase/ChangeLog
+++ b/YoteBase/ChangeLog
@@ -1,3 +1,7 @@
+2016-11-20 eric wolf  <coyocanid@gmail.com>
+	* Version 1.43
+	* fixed stupid weak major subtle reference bug. was referencing weakly references rather than thingies in some cases.
+
 2016-10-30 eric wolf  <coyocanid@gmail.com>
 	* Version 1.42
 	* added _DUMP and _DUMP_ALL methods for Yote::Obj
