upped version, added Yote::ServerSession

--- a/ServerYote/ChangeLog
+++ b/ServerYote/ChangeLog
@@ -1,4 +1,8 @@
 2016-09-01 eric wolf  <coyocanid@gmail.com>
+	* Version 1.20 : added Yote::ServerSession class which can do a (probably too simple)
+	replacement of object id with a session specific id for that object.
+	The point of this is to not leak object ids.
+2016-09-01 eric wolf  <coyocanid@gmail.com>
 	* Version 1.19 : Added Yote::Server::ModperlOperator
 	* This thing needs documentation *sigh*
 	
