--- a/ServerYote/ChangeLog
+++ b/ServerYote/ChangeLog
@@ -1,3 +1,5 @@
+ 2016-11-30 eric wolf  <coyocanid@gmail.com>
+	* Version 1.23 : quick fix for log foulup
 2016-11-29 eric wolf  <coyocanid@gmail.com>
 	* Version 1.22 : added a handler for yote json requests for the remote proc'y interface in the ModperlHandler
 	* upload file bug in yote.js
