--- a/ServerYote/ChangeLog
+++ b/ServerYote/ChangeLog
@@ -1,3 +1,5 @@
+2017-01-02 eric wolf  <coyocanid@gmail.com>
+	* Version 1.26 - fixed one off bug in session getid and fetch. set content type properly
 2016-12-05 eric wolf  <coyocanid@gmail.com>
 	* Version 1.24 - certain updated objects were not being returned by the server. Fixed that.
 	
