the new Yote::HASH and Yote::ARRAY classes that are size independent

--- a/FixedRecordStore/TODO.txt
+++ b/FixedRecordStore/TODO.txt
@@ -3,8 +3,23 @@ be able to open a record store read only
  * conversion of old to new database ( command line maybe? )
 
 
-testing -
- * check version
- * check db without version ( assumes < 2 ) - so bottle up an old style version
-     and see if it can be read from and written to
- 
+#-----------------------
+
+API documentation and testing
+
+open
+
+stow
+fetch
+delete
+
+empty
+empty_recycler
+recycle
+next_id
+has_id
+entry_count
+
+set_entry_count
+
+convert
